[package]
name = "scuffle"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
chrono = "0.4"
libc = "0.2"
libscf-sys = "1.1"
num-traits = "0.2"
oxnet = "0.1.4"
thiserror = "2.0"

# testing-only dependencies (spinning up an isolated `svc.configd`)
camino = { version = "1.2.2", optional = true }
camino-tempfile = { version = "1.4.1", optional = true }

[dev-dependencies]
anyhow = "1.0"
camino = "1.2.2"
camino-tempfile = "1.4.1"
clap = { version = "4.6", features = ["derive"] }

[[example]]
name = "run-isolated-configd"
required-features = ["testing"]

[features]
testing = [
    "dep:camino",
    "dep:camino-tempfile",
]
