[package]
name = "scuffle"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
chrono = "0.4"
libc = "0.2"
# TODO upstream this
libscf-sys = { git = "https://github.com/jgallagher/libscf-sys", branch = "john/fix-signatures" }
num-traits = "0.2"
oxnet = "0.1.4"
thiserror = "2.0"

# testing-only dependencies
camino = { version = "1.2.2", optional = true }
camino-tempfile = { version = "1.4.1", optional = true }
proptest = { version = "1.11", optional = true }
test-strategy = { version = "0.4.5", optional = true }

[dev-dependencies]
anyhow = "1.0"
camino = "1.2.2"
camino-tempfile = "1.4.1"
clap = { version = "4.6", features = ["derive"] }
proptest = "1.11"
test-strategy = "0.4.5"

[[example]]
name = "get-property-values"

[[example]]
name = "run-isolated-configd"
required-features = ["testing"]

[features]
testing = [
    "dep:camino",
    "dep:camino-tempfile",
    "dep:proptest",
    "dep:test-strategy",
]
